Fixed: removed bloaty CSS-manipulating code
-single.html demo now has a bit of CSS to make it look decent

-added automated margin to diva-inner to help centering

-enableAutoHeight and enableAutoWidth have been removed; implementation of these is up to the user to incorporate %-based CSS sizes. Resolves #221.

-heightProportion/widthProportion are thus not necessary anymore as they were used in maintaining diva-wrapper/diva-outer proportions

-gotoPage and getX/YOffset are now based off settings.panelWidth/panelHeight. These variables include scrollbar info and utilizing them seems to resolve #212

-pageTop/LeftOffsets are now based determinably off integers; also resolves #212

-condensed adjustMobileWebkitDims and adjustFullscreenDims into adjustBrowserDims, removed a vast majority of the code from these as well

-adjustBrowserDims has no return anymore as it would require a bunch of extra calculations that aren't necessary

-scrolling recalculates horizontal/verticalOffsets

-removed a bunch of on-initialization CSS manipulation that was no longer necessary

Also closes #217.

--- a/source/css/diva.less
+++ b/source/css/diva.less
@@ -146,6 +146,7 @@
     .diva-inner {
         position: relative;
         overflow: hidden;
+        margin: 0 auto;
 
         .diva-page {
             .pretty-shadow(6px);
